# BlockBreacker_C

./: CMakeLists.txt  README.md  audio.c  audio.h  ball.c  ball.h  block.c  block.h  color.c  color.h  game.c  game.h  geometry.c  geometry.h  keyhandler.c  keyhandler.h  main.c  window.c  window.h
cmake/modules/: FindSDL2_mixer.cmake
